# ARC-LoCoMoSeT

./: .gitignore  .pre-commit-config.yaml  README.md  activate_condaenv.sh  install_locomoset.sh  pyproject.toml  tmp.md
.github/workflows/: actions.yml  update_template.yml
baskerville_scripts/: bask_metric_exp_set_up.sh  metric_exp_slurm_template.sh  run_test.sh  test_array.sh
baskerville_scripts/MS2/: conda_setup.sh  drop-only_0_0_train.sh  interactive_setup.sh
configs/: binary_dataset.yaml  config_example.yaml  config_pets.yaml  config_pets_model_expr_test.yaml  config_pets_wandb.yaml  config_train.yaml  config_wp1.yaml  example_metrics_config.yaml  example_top_config.yaml  example_train_config.yaml  model_groups.csv  new_models.yaml  new_scores_imagenet.yaml  scores_imagenet1k.yaml  tda_config.yaml  tda_config_no_features.yaml  tda_config_test.yaml  test_top_config.yaml  top_config_binary_template.yaml  top_config_first_run.yaml  top_config_metric_exp.yaml  top_config_new_models.yaml  top_config_pets_small_sample.yaml  top_config_rvlcdip.yaml  top_config_second_run.yaml  top_config_template.yaml  top_config_test.yaml  top_config_wikiart.yaml  walltime_metrics.csv  walltime_train.csv
configs/20231017-150211-492655/: 0  1  2  3
configs/bin_datasets/: top_config_bin_faucet.yaml  top_config_bin_tree.yaml  top_config_bin_watch.yaml
configs/old/: config_pets.yaml  config_pets_model_expr_test.yaml  top_config_pets_small_sample.yaml  top_config_second_run.yaml  top_config_template.yaml  top_config_wikiart.yaml
configs/winter_runs_top_configs/: top_config_rvlcdip.yaml  top_config_rvlcdip_large.yaml  top_config_rvlcdip_mid.yaml  top_config_rvlcdip_small.yaml
notebooks/: ImageNet_check.ipynb  LEEP_development.ipynb  other_metrics.ipynb  parc_dev.ipynb  pipeline_tests.ipynb  renggli_dev.ipynb  tda_experiment_results.ipynb  tda_implementation.ipynb
scripts/: analyse.ipynb  analysis.py  analysisy_draft_script.py  best_worst.ipynb  class_rep.ipynb  combination_analysis.py  config_gen.py  constants.py  correlate_runs.py  delete_runs.py  get_model_stats.py  logme_imgnet.ipynb  mean_metrics.csv  mean_train.csv  metric_subsets.ipynb  mins_metrics.csv  mins_train.csv  model_groups.csv  model_stats.csv  pets_mins.csv  plot_renggli.py  plot_results.py  plot_vs_actual.py  plot_vs_samples.py  quick_analysis.ipynb  run_metrics.py  run_parc.py  run_renggli.py  rvl_cdip_mins_epochs.csv  time_analysis.ipynb  timings.csv  train_request.csv  utils.py  wikiart_mins.csv
scripts/configs/: config.yaml  config_parc.yaml  config_renggli.yaml  pre_config_lists.yaml  vit-base-patch16-384.yaml
src/locomoset/: __init__.py  run.py  run_test.sh
tables/: main-combo-regret.tex  main-combo-results.tex  mean-combo-results.csv  mean-combo-results.tex
templates/: jobscript_template.sh  metric_exp_slurm_template.sh  top_config_template.yaml
tests/: conftest.py  test_aggregate_metric_for_metrics.py  test_config_classes.py  test_create_bin_dataset.py  test_disable_cache.py  test_experiment_classes.py  test_features.py  test_load_model.py  test_load_preprocess.py  test_logme.py  test_metric_classes.py  test_metrics_for_metrics.py  test_model_classes.py  test_nce.py  test_parc.py  test_preprocess.py  test_reminders.py  test_renggli.py  test_run_metrics.py  test_task_agnostic.py  test_tda.py  test_train.py
tests/data/: README.md  dummy_config.json  dummy_config.py  dummy_config.yaml  dummy_jinja_editable_script.yaml  dummy_model_config.yaml  make_dummy_data.py  make_dummy_model.py  make_dummy_processor.py
tmpdata/: tmpdata.parquet
wandb/: settings
(+107 files in other folders)
