[tool.poetry]
name = "locomoset"
version = "0.1.0"
description = "Low-Cost Model Selection for Transformers"
authors = ["Applied Research Centre, The Alan Turing Institute <arc@turing.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.30.2"
datasets = "^2.13.0"
evaluate = "^0.4.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
scikit-learn = "^1.3.0"
ipywidgets = "^8.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
